--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "firebase": "^9.16.0",
+    "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.9.0",
     "peerjs": "^1.4.7",
     "react": "^18.2.0",
