--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "cors": "^2.8.5",
     "firebase": "^9.16.0",
     "jsonwebtoken": "^9.0.0",
+    "moment": "^2.29.4",
     "mongoose": "^6.9.0",
     "multer": "^1.4.5-lts.1",
     "peerjs": "^1.4.7",
@@ -19,6 +20,7 @@
     "react-router-dom": "^5.3.4",
     "react-scripts": "5.0.1",
     "socket.io-client": "^4.6.0",
+    "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
