--- a/backend/package.json
+++ b/backend/package.json
@@ -15,12 +15,17 @@
   "dependencies": {
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.1",
+    "cookie-session": "^2.0.0",
     "cors": "^2.8.5",
     "fs": "^0.0.1-security",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.9.1",
     "multer": "^1.4.5-lts.1",
+    "passport": "^0.6.0",
+    "passport-google-oauth20": "^2.0.0",
+    "paypal-rest-sdk": "^1.8.1",
     "peer": "^0.6.1",
-    "socket.io": "^4.6.0"
+    "socket.io": "^4.6.0",
+    "stripe": "^11.11.0"
   }
 }
