--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,8 @@
     "@emotion/styled": "^11.10.6",
     "@mui/icons-material": "^5.11.9",
     "@mui/material": "^5.11.10",
-    "@mui/styles": "^5.11.9",
+    "@paypal/paypal-js": "^5.1.4",
+    "@paypal/react-paypal-js": "^7.8.2",
     "@stripe/react-stripe-js": "^1.16.5",
     "@stripe/stripe-js": "^1.47.0",
     "@testing-library/jest-dom": "^5.16.5",
@@ -17,7 +18,6 @@
     "firebase": "^9.16.0",
     "peerjs": "^1.4.7",
     "react": "^18.2.0",
-    "react-audio-visualizers": "^0.1.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^5.3.4",
     "react-scripts": "5.0.1",
