--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,14 +16,17 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.2",
     "firebase": "^9.16.0",
+    "js-cookie": "^3.0.5",
     "peerjs": "^1.4.7",
     "react": "^18.2.0",
+    "react-cookie": "^4.1.1",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^5.3.4",
     "react-scripts": "5.0.1",
-    "socket.io-client": "^4.6.0"
+    "socket.io-client": "^4.6.0",
+    "uuid": "^9.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
