--- a/netlify.toml
+++ b/netlify.toml
@@ -2,6 +2,7 @@
   command = "npm run build"
   publish = "frontend/build"
   base = "frontend"
+  environment = ["MONGO_STRING", "STRIPE_PUBLIC_KEY", "STRIPE_SECRET_KEY"]
 
 [[redirects]]
   from = "/api/*"
