--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "fs": "^0.0.1-security",
+    "google-auth-library": "^8.9.0",
+    "googleapis": "^122.0.0",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.9.1",
     "multer": "^1.4.5-lts.1",
