--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,7 @@
     "@emotion/styled": "^11.10.6",
     "@mui/icons-material": "^5.11.9",
     "@mui/material": "^5.11.10",
+    "@mui/x-date-pickers": "^6.10.0",
     "@paypal/paypal-js": "^5.1.4",
     "@paypal/react-paypal-js": "^7.8.2",
     "@stripe/react-stripe-js": "^1.16.5",
@@ -15,10 +16,12 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.2",
+    "dayjs": "^1.11.9",
     "firebase": "^9.16.0",
     "js-cookie": "^3.0.5",
     "peerjs": "^1.4.7",
     "react": "^18.2.0",
+    "react-adsense": "^0.1.0",
     "react-cookie": "^4.1.1",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
